syntax="proto3";

package protos;

option go_package="github.com/sarthakraheja/bank-simulator/protos";

// The acquring bank service definition.
service AcquiringBankService {
  rpc CapturePayment (CapturePaymentRequest) returns (CapturePaymentResponse) {}
  rpc AuthorisePayment(AuthorisePaymentRequest) returns (AuthorisePaymentResponse) {}
}

enum CreditCardType{
    CreditCardType_UNSPECIFIED=0;
    CreditCardType_AMEX=1;
    CreditCardType_VISA=2;
    CreditCardType_MASTERCARD=3;
}

message CreditCard{
    string card_holder_name=1;
    string credit_card_number=2;
    string expiry_date=3;
    string cvv=4;
    CreditCardType credit_card_type=5;
}


// The request message containing the user's name.
message CapturePaymentRequest {
    string idempotency_key = 1;
    string amount=2;
    string currency=3;
    string marchant_id=4;
    CreditCard credit_card=5;
}


// The response message containing the greetings
message CapturePaymentResponse {
}

// The request message containing the user's name.
message AuthorisePaymentRequest {
    string idempotency_key = 1;
    string amount=2;
    string currency=3;
    string marchant_id=4;
    CreditCard credit_card=5;
}


// The response message containing the greetings
message AuthorisePaymentResponse {

}

